--- a/Assets/Shared Assets/UI.uxml
+++ b/Assets/Shared Assets/UI.uxml
@@ -1,5 +1,3 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="MainScreen" style="flex-grow: 1;">
-        <ui:Label tabindex="-1" text="Current Weapon: Lazer Pistol" parse-escape-sequences="true" display-tooltip-when-elided="true" style="color: rgb(255, 0, 0); font-size: 25px; -unity-font: initial;" />
-    </ui:VisualElement>
+    <ui:VisualElement name="MainScreen" style="flex-grow: 1;" />
 </ui:UXML>
